--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,6 +160,8 @@
         <item> </item>
     </string-array>
     <string name="skip">Lewati</string>
+    <string name="close">Tutup</string>
+    <string name="i_understand">Saya mengerti, lanjutkan</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
