--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
     <string name="prev">Sebelumnya</string>
     <string name="back">Kembali</string>
     <string name="use">Gunakan</string>
+    <string name="yes">Ya</string>
+    <string name="no">Tidak</string>
     <string name="verify">Verifikasi</string>
     <string name="take_again">Foto ulang</string>
     <string name="ive_read_2">Saya telah membaca dan setuju dengan Syarat dan Ketentuan Avantee diatas</string>
