Minor update on setting workflow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,6 +185,11 @@
     <string name="new_password">Kata sandi baru</string>
     <string name="retype_new_password">Ulangi kata sandi baru</string>
     <string name="save_new_password">Simpan kata sandi baru</string>
+    <string name="profile_picture">Foto profil</string>
+    <string name="take_profile_picture">Ambil foto</string>
+    <string name="profile_picture_desc">Ambil foto terbaik Anda untuk digunakan sebagai foto profil. Pastikan wajah terlihat dengan jelas di dalam bingkai foto.</string>
+    <string name="password_changed">Berhasil mengubah kata sandi</string>
+    <string name="password_changed_desc">Silakan masuk kembali menggunakan kata sandi baru Anda.</string>
     <!-- TODO: use these string => personal_data, work_info, addresses, other_family_member, bank_info, essential_document -->
 
     <!-- TODO: Misc -->
@@ -204,9 +209,6 @@
     <string name="afpi_logo">AFPI Logo</string>
     <string name="logo">Logo</string>
     <string name="currency_IDR">Rp</string>
-    <string name="profile_picture">Foto profil</string>
-    <string name="take_profile_picture">Ambil foto</string>
-    <string name="profile_picture_desc">Ambil foto terbaik Anda untuk digunakan sebagai foto profil. Pastikan wajah terlihat dengan jelas di dalam bingkai foto.</string>
     <string name="tips_for_photo">Petunjuk pengambilan foto</string>
     <string name="account_foto_tips">Untuk mempercepat proses verifikasi identitas Anda, mohon mengambil foto halaman depan buku rekening atau rekening koran seperti contoh berikut:</string>
     <string name="account_book">Buku rekening</string>
